--- a/stories/components/TagSelector/tag-selector.scss
+++ b/stories/components/TagSelector/tag-selector.scss
@@ -47,6 +47,17 @@ $gui-no-data: #eeeeee;
 $gui-error-red: #fd462a;
 $font-family: 'Roboto', sans-serif;
 
+.VS-Tag-Selector-Wrapper{
+    input[type=text]:focus{
+        border: none;
+        box-shadow: none;
+    }
+
+    *, *:before, *:after {
+        box-sizing: content-box;
+    }
+}
+
 tag-selector{
     z-index: 9989;
 }
@@ -103,14 +114,6 @@ tag-selector{
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-}
-
-.VS-CodeText {
-    // text-overflow: ellipsis;
-    // white-space: nowrap;
-    // overflow: hidden;
-    // width: 50%;
-    // float: left;
 }
 
 .VS-Tag-Input-Border.VS-ReadOnly,
@@ -176,7 +179,7 @@ tag-selector{
 
 .VS-TagSelectorContainer{
     background-color: #fff;
-    width: 328px;
+    width: 327px;
     height: auto;
     max-height: 224px;
     border: 1px solid #ddd;
@@ -323,7 +326,6 @@ tag-selector{
 
 .VS-TooltipText-Top{
     margin-top: -40px !important;
-    // bottom: 22px;
 }
 
 .VS-AutoCompleteItem-New.VS-ExtraWidth{
